--- a/Portafolio.html
+++ b/Portafolio.html
@@ -37,7 +37,7 @@
         </nav>
         
         <div class="Video_todos">
-            <video src="Videos/Portada/Fondo_Todos_1.mp4" autoplay loop muted style="width: 1800px; height: 780px;">VideoFondoTodos</video>
+            <video src="Videos/Portada/Fondo_Todos_1.webm" autoplay loop muted style="width: 1800px; height: 780px;">VideoFondoTodos</video>
         </div>
         
         <section>
@@ -59,7 +59,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="Videos/Portafolio/Cortomatrajes/Corto1_HUMAN.mp4" autoplay loop muted class="frontal" class="Porta"></video>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto1_HUMAN.webm" autoplay loop muted class="frontal" class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"HUMAN"</h4>
                             <hr>
@@ -72,7 +72,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Cortomatrajes/Corto2_INOCENCIA PERDIDA.mp4" autoplay loop muted class="frontal" class="Porta"></VIdeo>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto2_INOCENCIA PERDIDA.webm" autoplay loop muted class="frontal" class="Porta"></VIdeo>
                         <figcaption class="trasera">
                             <h4>"INOCENCIA PERDIDA"</h4>
                             <hr>
@@ -85,7 +85,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Cortomatrajes/Corto3_JOAQUIN GIRA.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto3_JOAQUIN GIRA.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"JOAQUIN DE GIRA"</h4>
                             <hr>
@@ -98,7 +98,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Cortomatrajes/Corto4_MELORA.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto4_MELORA.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"MELORA"</h4>
                             <hr>
@@ -111,7 +111,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Cortomatrajes/Corto5_NEW DARK.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto5_NEW-DARK.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"NEW DARK"</h4>
                             <hr>
@@ -124,7 +124,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Cortomatrajes/Corto6_RELATO_ JOAQUIN.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto6_RELATO_ JOAQUIN.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"COVID-19 DESDE UN GATO"</h4>
                             <hr>
@@ -137,7 +137,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Cortomatrajes/Corto7_SILVI.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto7_SILVI.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"DADY"</h4>
                             <hr>
@@ -150,7 +150,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Cortomatrajes/Corto8_SOFI.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto8_SOFI.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"THE FATHER"</h4>
                             <hr>
@@ -163,7 +163,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Cortomatrajes/Corto9_SOFI Y SIVI.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Cortomatrajes/Corto9_SOFI-Y-SIVI.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"DARK NIGTH"</h4>
                             <hr>
@@ -182,7 +182,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="Videos/Portafolio/Documentales/MAFIA - PORTADA.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Documentales/MAFIA - PORTADA.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"TOCADOS POR LA MAFIA"</h4>
                             <hr>
@@ -195,7 +195,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Documentales/PLACER - PORTADA.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Documentales/PLACER - PORTADA.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"PLACER"</h4>
                             <hr>
@@ -214,7 +214,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="Videos/Portafolio/VideoClips/VIDEOCLIP - PORTADA.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/VideoClips/VIDEOCLIP - PORTADA.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"VAMO ALLÁ"</h4>
                             <hr>
@@ -233,7 +233,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="Videos/Portafolio/Eventos/EVENTO- PORTADA_1.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Eventos/EVENTO- PORTADA_1.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"HAPPY BIRTHDAY ADRIAN"</h4>
                             <hr>
@@ -252,7 +252,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="Videos/Portafolio/Publicidad/PUBLI - PORTADA.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Publicidad/PUBLI - PORTADA.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"FAST BEAUTY"</h4>
                             <hr>
@@ -271,7 +271,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="Videos/Portafolio/Redes/REDES  2- PORTADA.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Redes/REDES  2- PORTADA.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"FROZEEN PARA NATY"</h4>
                             <hr>
@@ -284,7 +284,7 @@
             <div class="corto-container">
                 <a href="#">
                     <figure>
-                        <video src="videos/Portafolio/Redes/REDES 1 - PORTADA.mp4" autoplay loop muted class="Porta"></video>
+                        <video src="Videos/Portafolio/Redes/REDES 1 - PORTADA.webm" autoplay loop muted class="Porta"></video>
                         <figcaption class="trasera">
                             <h4>"ASPEMIUC"</h4>
                             <hr>
