--- a/Contacto.html
+++ b/Contacto.html
@@ -38,7 +38,7 @@
         </nav>          
         
         <div class="Video_todos">
-            <video src="Videos/Portada/Fondo_Todos_1.mp4" autoplay loop muted style="width: 1800px; height: 780px;">VideoFondoTodos</video>
+            <video src="Videos/Portada/Fondo_Todos_1.webm" autoplay loop muted style="width: 1800px; height: 780px;">VideoFondoTodos</video>
         </div>
         
         <h3 class="h3contacto">
