--- a/Fotografia.html
+++ b/Fotografia.html
@@ -38,7 +38,7 @@
         </nav>
          
         <div class="Video_todos">
-          <video src="Videos/Portada/Fondo_Todos_1.mp4" autoplay loop muted style="width: 1800px; height: 780px;">VideoFondoTodos</video>
+          <video src="Videos/Portada/Fondo_Todos_1.webm" autoplay loop muted style="width: 1800px; height: 780px;">VideoFondoTodos</video>
       </div>
       
         <h1 class="h3contacto">
@@ -160,63 +160,63 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner foto-contenedor">
                     <div class="carousel-item active">
-                      <img src="Imagenes/Street Art/Chile1.JPG" class="foto-img" class="d-block w-100" alt="Presentación">
+                      <img src="Imagenes/Street Art/Chile1.webp" class="foto-img" class="d-block w-100" alt="Presentación">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile2.JPG" class="foto-img" class="d-block w-100" alt="Fotografía Bill Brand 1">
+                      <img src="Imagenes/Street Art/Chile2.webp" class="foto-img" class="d-block w-100" alt="Fotografía Bill Brand 1">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile3.JPG" class="foto-img" class="d-block w-100"  alt="Fotografía Bill Bran 2">
+                      <img src="Imagenes/Street Art/Chile3.webp" class="foto-img" class="d-block w-100"  alt="Fotografía Bill Bran 2">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile4.JPG" class="foto-img" class="d-block w-100"  alt="Indoor">
+                      <img src="Imagenes/Street Art/Chile4.webp" class="foto-img" class="d-block w-100"  alt="Indoor">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile5.JPG" class="foto-img" class="d-block w-100"  alt="Plegaria">
+                      <img src="Imagenes/Street Art/Chile5.webp" class="foto-img" class="d-block w-100"  alt="Plegaria">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile6.JPG" class="foto-img" class="d-block w-100"  alt="Tranquilidad es la clave">
+                      <img src="Imagenes/Street Art/Chile6.webp" class="foto-img" class="d-block w-100"  alt="Tranquilidad es la clave">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile7.JPG" class="foto-img" class="d-block w-100"  alt="Ganas de Volar">
+                      <img src="Imagenes/Street Art/Chile7.webp" class="foto-img" class="d-block w-100"  alt="Ganas de Volar">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile8.JPG" class="foto-img" class="d-block w-100"  alt="Comparativa Uno">
+                      <img src="Imagenes/Street Art/Chile8.webp" class="foto-img" class="d-block w-100"  alt="Comparativa Uno">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile9.JPG" class="foto-img" class="d-block w-100"  alt="Comparariva dos">
+                      <img src="Imagenes/Street Art/Chile9.webp" class="foto-img" class="d-block w-100"  alt="Comparariva dos">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile10.JPG" class="foto-img" class="d-block w-100"  alt="Expresión artistica">
+                      <img src="Imagenes/Street Art/Chile10.webp" class="foto-img" class="d-block w-100"  alt="Expresión artistica">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile11.JPG" class="foto-img" class="d-block w-100"  alt="Pecho Piernas">
+                      <img src="Imagenes/Street Art/Chile11.webp" class="foto-img" class="d-block w-100"  alt="Pecho Piernas">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile12.JPG" class="foto-img" class="d-block w-100"  alt="Oreja">
+                      <img src="Imagenes/Street Art/Chile12.webp" class="foto-img" class="d-block w-100"  alt="Oreja">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile13.JPG" class="foto-img" class="d-block w-100"  alt="Pies uno">
+                      <img src="Imagenes/Street Art/Chile13.webp" class="foto-img" class="d-block w-100"  alt="Pies uno">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile14.JPG" class="foto-img" class="d-block w-100"  alt="Pies dos">
+                      <img src="Imagenes/Street Art/Chile14.webp" class="foto-img" class="d-block w-100"  alt="Pies dos">
                     </div>
 
                     <div class="carousel-item">
-                      <img src="Imagenes/Street Art/Chile15.JPG" class="foto-img" class="d-block w-100"  alt="Plantas de Pies">
+                      <img src="Imagenes/Street Art/Chile15.webp" class="foto-img" class="d-block w-100"  alt="Plantas de Pies">
                     </div>                   
 
                 </div>
